# kv-diff-experiment

./: RESULTS.md  data_cache.json  hello.py  kv_diff.py  kv_diff_attention.py  kv_diff_extended.py  kv_diff_extended_rope.py  kv_diff_long.py  kv_transplant.py  plot_analysis.py  plot_comparison.py  plot_fft_by_roll.py  plot_fft_comprehensive.py  plot_original_comparison.py  plot_rope_roll_truncate.py  prepare_data.py  pyproject.toml  rope_position_analysis.py  run_all.sh  run_original_all.sh  run_remaining.sh
orig_14b_instruct/: results.json
orig_7b_base/: results.json
results/: results.json
results_14b_base/: roll_truncate.json
results_14b_instruct/: roll_truncate.json  summary.json
results_7b_base/: roll_truncate.json  summary.json
results_attention/: attention_results.json
results_attention/results_attn/: attention_results.json
results_ext_remote/: roll_truncate.json  summary.json
results_rope_2000/: roll_truncate_rope.json
results_transplant/: rope_correction.json  rope_position_analysis.json  transplant_results.json
